src/test/ui/where-clauses/where-for-self-2.nll.stderr
error: higher-ranked subtype error
  --> $DIR/where-for-self-2.rs:23:5
   |
LL |     foo(&X);
   |     ^^^^^^^

error: aborting due to previous error

